--- a/Тема_6_Списки_Часть_1.ipynb
+++ b/Тема_6_Списки_Часть_1.ipynb
@@ -110,13 +110,13 @@
         "\n",
         "Так же, как и в строках, для нумерации с конца разрешены отрицательные индексы.\n",
         "\n",
-        "Выражение |\tРезультат |\tПояснение|\n",
+        "Выражение |Результат |Пояснение|\n",
         "----------|-----------|----------|\n",
-        "numbers[-1] |\t10 |\tпятый элемент списка\n",
-        "numbers[-2] |\t8 |четвертый элемент списка\n",
-        "numbers[-3] |\t6 |\tтретий элемент списка\n",
-        "numbers[-4] |\t4 |\tвторой элемент списка\n",
-        "numbers[-5] |\t2 |\tпервый элемент списка\n",
+        "numbers[-1] |10 |пятый элемент списка\n",
+        "numbers[-2] |8 |четвертый элемент списка\n",
+        "numbers[-3] |6 |\tтретий элемент списка\n",
+        "numbers[-4] |4 |\tвторой элемент списка\n",
+        "numbers[-5] |2 |\tпервый элемент списка\n",
         "\n",
         "Как и в строках, попытка обратиться к элементу списка по несуществующему индексу:\n",
         "```\n",
