--- a/Тема_6_Списки_Часть_1.ipynb
+++ b/Тема_6_Списки_Часть_1.ipynb
@@ -99,13 +99,13 @@
         "\n",
         "Таблица ниже показывает, как работает индексация:\n",
         "\n",
-        "\tВыражение |\tРезультат |\tПояснение|\n",
+        "Выражение |Результат |Пояснение|\n",
         "----------|-----------|----------|\n",
-        "\tnumbers[0] |\t2 |\tпервый элемент списка\n",
-        "\tnumbers[1] |\t4 |\tвторой элемент списка\n",
-        "\tnumbers[2] |\t6 |\tтретий элемент списка\n",
-        "\tnumbers[3] |\t8 |\tчетвертый элемент списка\n",
-        "\tnumbers[4] |\t10 |\tпятый элемент списка\n",
+        "numbers[0] |\t |\tпервый элемент списка\n",
+        "\tnumbers[1] |\t |\tвторой элемент списка\n",
+        "\tnumbers[2] |\t |\tтретий элемент списка\n",
+        "\tnumbers[3] |\t |\tчетвертый элемент списка\n",
+        "\tnumbers[4] |\t |\tпятый элемент списка\n",
         "\n",
         "\n",
         "Так же, как и в строках, для нумерации с конца разрешены отрицательные индексы.\n",
